--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,29 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap');
 
 body {
-  background:#f0f3bd;
+  background: #f0f3bd;
   font-family: Roboto, Arial, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    color: black;
-    font-family: Lato, "Comic Sans MS", sans-serif;
-    margin-top: 1px;
-  }
+h1,h2,h3,h4,h5,h6 {
+  color: black;
+  font-family: Lato, "Comic Sans MS", sans-serif;
+  margin-top: 1px;
+}
+
+#content {
+  width: 90%;
+  margin: 0 auto;
+}
+
+#logo {
+  position: absolute;
+  top: 0px;
+  background: white;
+  margin-left: 25px;
+  border: solid black 1px;
+}
+
+#nome {
   
-  #content {
-    width: 90%;
-    margin: 0 auto;
-  }
-  
-  #logo {
-    position: absolute;
-    top: 0px;
-    background: white;
-    margin-left: 25px;
-    border: solid black 1px;
-  } 
+}
