--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,9 @@ body {
 
 h1 {
   color: white;
+  background: #028090;
   margin-top: 1px;
+  align-content: center;
 }
 
 h2 {
@@ -28,6 +30,7 @@ footer {
 
 #logo {
   position: absolute;
+  max-width: 10%;
   top: 10px;
   right: 10px;
 }
