--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,19 @@
-@import url('https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap');
-
 body {
-  background: #f0f3bd;
   font-family: Arial, "Comic Sans MS", sans-serif;
+}
+
+main {
+  padding: 10px;
 }
 
 h1 {
   color: white;
   background: #028090;
-  margin-top: 1px;
-  align-content: center;
+  margin-top: 10px;
+  padding: 0.5em;
+  padding-right: 150px;
+  text-align: center;
+  border-radius: 10px;
 }
 
 h2 {
@@ -20,9 +24,16 @@ h2 {
 footer {
   background: #028090;
   color: white;
-  padding: 0px 10px; 
-  align-content: center;
+  padding: 0.2em;
+  text-align: center;
+  border-radius: 10px;
 }
+
+footer p {
+  justify-content: center;
+  margin: 0px;
+}
+
 #content {
   width: 90%;
   margin: 0 auto;
@@ -30,11 +41,32 @@ footer {
 
 #logo {
   position: absolute;
-  width: 10%;
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  right: 5%;
 }
 
-#nome {
+header img {
+  height: 150px;
+  padding: 0 20px;
+}
 
+#line1 {
+  font-size: 1em;
+  margin-top: 7px;
+  margin-bottom: 1px;
+}
+
+#line2 {
+  font-size: 0.8em;
+  color: yellow;
+  margin-top: 1px;
+  margin-bottom: 7px;
+}
+
+footer a {
+  color: white;
+}
+
+footer a:hover {
+  color: yellowgreen;
 }
