--- a/styles/middle.css
+++ b/styles/middle.css
@@ -1,1 +1,13 @@
-@media (min-width: 32.5em)
+@media (max-width: 60em) {
+  h1 {
+    font-size: 2.0em;
+  }
+
+  h2 {
+    font-size: 1.2em;
+  }
+
+  header img {
+    float: right;
+  }
+}
