--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@ main {
 }
 
 h1 {
+  font-size: 2.5em;
   color: white;
   background: #028090;
   margin-top: 10px;
@@ -17,6 +18,7 @@ h1 {
 }
 
 h2 {
+  font-size: 1.5em;
   color: black;
   margin-top: 1px;
   border-bottom: 1px solid #bbb;
