--- a/lesson2/styles/styles-lesson2.css
+++ b/lesson2/styles/styles-lesson2.css
@@ -4,13 +4,19 @@ main {
 
 h1 {
   padding: 0.5em;
+  font-size: 2.5em;
+}
+
+h2 {
+  font-size: 1.5em;
 }
 
 .principle-box {
   border: 1px solid black; 
   border-radius: 5px;
   margin: 0px 10px;
-  background: #02fcc6;
+  background: #e1e8f7;
+  max-width: 30em;
 }
 
 .principle {
