--- a/lesson2/styles/middle2.css
+++ b/lesson2/styles/middle2.css
@@ -1,10 +1,14 @@
-@media (max-width: 60em) {
-    h1 {
-      font-size: 1.5em;
-    }
-  
-    h2 {
-      font-size: 1.0em;
-    }
-  
+@media only screen and (max-width: 60em) {
+  main {
+    grid-template-columns: 1fr 1fr;
   }
+
+  h1 {
+    font-size: 2.0em;
+  }
+
+  h2 {
+    font-size: 1.3em;
+  }
+
+}
