--- a/lesson2/styles/small2.css
+++ b/lesson2/styles/small2.css
@@ -1,9 +1,13 @@
-@media (max-width: 40em) {
-    h1 {
-      font-size: 1.0em;
-    }
-  
-    h2 {
-      font-size: 0.8em;
-    }
+@media (max-width: 32.5em) {
+  main {
+    grid-template-columns: 1fr;
   }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.1em;
+  }
+}
