--- a/lesson2/styles/styles-lesson2.css
+++ b/lesson2/styles/styles-lesson2.css
@@ -1,5 +1,6 @@
 main {  
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 h1 {
@@ -14,7 +15,7 @@ h2 {
 .principle-box {
   border: 1px solid black; 
   border-radius: 5px;
-  margin: 0px 10px;
+  margin: 10px;
   background: #e1e8f7;
   max-width: 30em;
 }
