--- a/lesson3/styles/large3.css
+++ b/lesson3/styles/large3.css
@@ -1,8 +1,3 @@
-main {  
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
 h1 {
   padding: 0.5em;
   font-size: 2.5em;
@@ -10,32 +5,24 @@ h1 {
 
 h2 {
   font-size: 1.5em;
+  border-top: 1px solid #bbb;
+  border-bottom: 0;
 }
 
 .principle-box {
-  border: 1px solid black; 
-  border-radius: 5px;
-  margin: 10px;
-  background: #e1e8f7;
-  max-width: 30em;
-}
-
-.principle {
-  padding: 10px;
-}
-
-.title {
-  color: whitesmoke;
-  background: black;
-  padding: 10px;
-  margin: 0px;
-  text-align: center;
+  padding: 10px 0;
 }
 
 .image {
+  max-width: 150px;
   width: 50%;
   display: block;
-  margin: auto;
+}
+
+.image2 {
+  max-width: 400px;
+  width: 90%;
+  display: block;
 }
 
 .paragraph {
