--- a/lesson3/styles/small3.css
+++ b/lesson3/styles/small3.css
@@ -1,8 +1,4 @@
-@media (max-width: 35em) {
-  main {
-    grid-template-columns: 1fr;
-  }
-
+@media only screen and (max-width: 35em) {
   h1 {
     font-size: 1.5em;
     padding-left: 0;
