--- a/styles/medium.css
+++ b/styles/medium.css
@@ -1,8 +1,4 @@
-@media (max-width: 60em) {
-  main {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  
+@media only screen and (max-width: 60em) {
   h1 {
     font-size: 2.0em;
   }
