--- a/styles/small.css
+++ b/styles/small.css
@@ -1,8 +1,4 @@
-@media (max-width: 32.5em) {
-  main {
-    grid-template-columns: 1fr 1fr;
-  }
-
+@media only screen and (max-width: 32.5em) {
   h1 {
     font-size: 1.5em;
   }
