--- a/lesson2/styles/small2.css
+++ b/lesson2/styles/small2.css
@@ -12,6 +12,14 @@
     font-size: 1.1em;
   }
   
+  #line1 {
+    font-size: 0.8em;
+  }
+  
+  #line2 {
+    font-size: 0.6em;
+  }
+  
   .return {
     padding: 0.3em;
     position: absolute;
