--- a/lesson3/styles/medium3.css
+++ b/lesson3/styles/medium3.css
@@ -8,13 +8,29 @@
     font-size: 1.3em;
   }
   
-  .return, .next {
-    padding: 0.4em;
-    position: absolute;
-    top: 47px;
+  nav, .return {
+    line-height: 2em;
+    text-align: right;
+    padding-right: 10px;
+    margin-top: -21px;
   }
   
-  .return a, .next a {
+  nav a, .return a {
     font-size: 0.9em;
+  }
+
+  #line1 {
+    font-size: 0.9em;
+  }
+  
+  #line2 {
+    font-size: 0.7em;
+  }
+
+  .return {
+    line-height: 1.5em;
+    position: absolute;
+    left: 6%;
+    top: 101px;  
   }
 }
