--- a/lesson3/styles/small3.css
+++ b/lesson3/styles/small3.css
@@ -3,18 +3,34 @@
     font-size: 1.5em;
     padding-left: 0;
   }
+  
+  nav, .return {
+    line-height: 2em;
+    text-align: right;
+    padding-right: 10px;
+    margin-top: -16px;
+  }
+  
+  nav a, .return a {
+    font-size: 0.8em;
+  }
 
   h2 {
     font-size: 1.1em;
   }
   
-  .return, .next {
-    padding: 0.3em;
-    position: absolute;
-    top: 33px;
+  #line1 {
+    font-size: 0.8em;
   }
   
-  .return a, .next a {
-    font-size: 0.8em;
+  #line2 {
+    font-size: 0.6em;
+  }
+  
+  .return {
+    line-height: 1.5em;
+    position: absolute;
+    left: 6%;
+    top: 79px;  
   }
 }
