--- a/styles/medium.css
+++ b/styles/medium.css
@@ -4,10 +4,22 @@
   }
 
   h2 {
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
 
   header img {
     float: right;
+  }
+
+  li {
+    font-size: 0.9em;
+  }
+
+  #line1 {
+    font-size: 0.9em;
+  }
+  
+  #line2 {
+    font-size: 0.7em;
   }
 }
