--- a/styles/small.css
+++ b/styles/small.css
@@ -1,10 +1,21 @@
-@media only screen and (max-width: 32.5em) {
+@media only screen and (max-width: 50em) {
   h1 {
     font-size: 1.5em;
   }
 
   h2 {
-    font-size: 1.0em;
+    font-size: 1.1em;
   }
 
+  li {
+    font-size: 0.8em;
+  }
+
+  #line1 {
+    font-size: 0.8em;
+  }
+  
+  #line2 {
+    font-size: 0.6em;
+  }
 }
