--- a/lesson4/styles/large4.css
+++ b/lesson4/styles/large4.css
@@ -1,41 +1,48 @@
 h1 {
-  padding: 1.0em;
+  padding: 1.0em 5px;
   font-size: 2.5em;
   border-radius: 0;
+  margin: 0px;
 }
 
 h2 {
-  font-size: 1.5em;
-  border-top: 1px solid #bbb;
-  border-bottom: 0;
+  font-family: 'Lobster', cursive, Arial;
+  font-size: 2.0em;
+  border: 0;
+  text-align: center;
+  padding: 0.5em;
 }
 
-header {  
+header {
+  background: #028090;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
   width: 100%;
 }
 
 header p {
   font-size: 1em;
   color: white;
-  background: #028090;
   padding: 0.5em;
   text-align: center;
-  margin-top: -75px;
+  margin-top: -50px;
 }
 
 nav {
-  background: #028090;
+  background: #1446a0;
   line-height: 3em;
   text-align: center;
-  margin-top: 0px;
+  margin: -16px;
 }
 
 nav a {
   color: white;
   font-size: 1.0em;
-  line-height: 1.5;
+  line-height: 1.5px;
   text-decoration: none;
-  padding: 5px 10px;
+  padding: 15px;
+  border-radius: 0;
 }
 
 nav li {
@@ -45,34 +52,37 @@ nav li {
 nav a:hover {
   background: gray;
   color: yellow;
-  border-radius: 5px;
+  padding: 15.5px 15px;
 }
 
 nav button {
   display: none;
 }
 
+section {
+  background: #e1e8f7;
+  border-top: 1px dashed;
+  border-bottom: 1px dashed;
+  margin: 10px 0;
+}
+
+footer {
+  border-radius: 0px;
+}
+
 #active-page {
   color: yellow;
 }
 
-.principle-box {
-  padding: 10px 0;
+#line3 {
+  font-size: 0.8em;
+  color: yellow;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 
-.logo {
-  max-width: 150px;
-  width: 50%;
-  display: inline;
-  background: transparent;
-}
-
-.image2 {
-  max-width: 400px;
-  width: 90%;
-  display: block;
-}
-
-.paragraph {
-  color: black;
+.logo img {
+  height: 116px;
+  padding: 0px;
+  padding-top: 4px;
 }
