--- a/lesson4/styles/large4.css
+++ b/lesson4/styles/large4.css
@@ -59,7 +59,7 @@ nav button {
   display: none;
 }
 
-section {
+.sections {
   background: #e1e8f7;
   border-top: 1px dashed;
   border-bottom: 1px dashed;
