--- a/lesson5/styles/medium5.css
+++ b/lesson5/styles/medium5.css
@@ -8,6 +8,10 @@
     font-size: 1.5em;
   }
 
+  h3 {
+    font-size: 1.2em;
+  }
+
   header p {
     font-size: 0.9em;
     margin-top: -40px;
@@ -38,16 +42,92 @@
     padding: 0px;
     padding-top: 4px;
   }
-  
+
   #line1 {
     font-size: 0.9em;
   }
 
-  #line2, #line3 {
+  #line2,
+  #line3 {
     font-size: 0.7em;
   }
 
   #pancake p {
     font-size: 1em;
+  }
+
+  .summary {
+    width: 185px;
+    opacity: 0.9;
+  }
+
+  .summary p {
+    font-size: 1.1em;
+  }
+
+  .summary .left {
+    font-size: 0.9em;
+  }
+
+  .summary .right {
+    font-size: 0.9em;
+  }
+
+  .tableDay {
+    font-size: 0.9em;
+  }
+
+  .weatherIcon {
+    max-width: 40px;
+    padding: 5px 27%;
+  }
+
+  .maxTemp {
+    font-size: 0.95em;
+  }
+
+  .minTemp {
+    font-size: 0.85em;
+  }
+
+  .article img {
+    width: 60%;
+    float: right;
+    margin: 0 10px 10px 10px;
+    box-shadow: 5px 5px 10px black;
+  }
+    
+  .article p {
+    font-size: 0.9em;
+
+  }
+  .article a {
+    font-size: 0.8em;
+  }
+
+  .contact {
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: center;
+  }
+  
+  .contact p {
+    font-size: 0.8em;
+
+  }
+
+  
+  .map {
+    float: left;
+    height: 200px;
+    border: black solid 1px;
+    margin: 10px 10px -10px;
+  }
+  
+  .icon {
+    max-width: 30px;
+    max-height: 30px;
+    border: none;
   }
 }
