--- a/lesson7/styles/lazyload.css
+++ b/lesson7/styles/lazyload.css
@@ -9,6 +9,10 @@ header {
   margin: 10px;
 }
 
+img[data-src] {
+  filter: blur(0.1em);
+}
+
 img { 
   filter: blur(0em);
   transition: filter 0.5s;
