--- a/lesson7/styles/small7.css
+++ b/lesson7/styles/small7.css
@@ -62,6 +62,10 @@
     padding: 0px;
     padding-top: 4px;
   }
+  
+  .pictures {
+    grid-template-columns: 1fr;
+  }
 
   #line1 {
     font-size: 0.8em;
