--- a/lesson7/styles/large7.css
+++ b/lesson7/styles/large7.css
@@ -59,10 +59,6 @@ nav button {
   display: none;
 }
 
-figure {
-  max-width: 10%;
-}
-
 footer {
   border-radius: 0px;
 }
@@ -78,7 +74,7 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-.pictures div {
+.pictures figure {
   border: 1px solid gray;
   margin: 0 5% 5%;
   background: #e1e8f7;
