--- a/lesson7/styles/small7.css
+++ b/lesson7/styles/small7.css
@@ -67,6 +67,31 @@
     grid-template-columns: 1fr;
   }
 
+  .contact .map {
+    display: none;
+  }
+  
+  .contact {
+    padding: 0;
+  }
+
+  .contact div p {
+    margin: 2px;
+  }
+
+  .article img {
+    width: 99%;
+    margin: 0 0 10px;
+    border: solid gray 1px;
+    box-shadow: none;
+  }
+
+  .icon {
+    max-width: 30px;
+    max-height: 30px;
+    border: none;
+  }
+
   #line1 {
     font-size: 0.8em;
   }
