--- a/lesson8/styles/medium8.css
+++ b/lesson8/styles/medium8.css
@@ -39,14 +39,6 @@
     padding-top: 4px;
   }
 
-  .pictures {
-    grid-template-columns: 1fr 1fr;
-  }
-  
-  .pictures figure:hover {
-    box-shadow: none;
-  }
-
   #line1 {
     font-size: 0.9em;
   }
@@ -55,4 +47,8 @@
   #line3 {
     font-size: 0.7em;
   }
+  
+#area input {
+  min-width: 95%;
+}
 }
