--- a/lesson7/styles/large7.css
+++ b/lesson7/styles/large7.css
@@ -94,6 +94,36 @@ footer {
   box-shadow: 0 0 30px gray;
 }
 
+.contact {
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  justify-content: center;
+  margin-bottom: 0;
+  background: #e1e8f7;
+  margin: 30px 0;
+  padding: 1px 20px 20px;
+}
+
+.article img {
+  float: right;
+  margin: 0 10px 10px 10px;
+  box-shadow: 5px 5px 10px black;
+}
+
+.map {
+  float: left;
+  height: 200px;
+  border: black solid 1px;
+  margin: 10px 50px -10px;
+}
+
+.icon {
+  max-width: 40px;
+  max-height: 40px;
+  border: none;
+}
+
 #active-page {
   color: yellow;
 }
