--- a/lesson8/styles/large8.css
+++ b/lesson8/styles/large8.css
@@ -13,8 +13,10 @@ h2 {
   padding: 0.5em;
 }
 
-h3 {
+legend {
   margin: 0;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 header {
@@ -84,25 +86,12 @@ footer {
   margin-bottom: 1px;
 }
 
+#tx {
+  text-align: center;
+  padding-bottom: 5%;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*----------- FORM --------------*/
+/*----------- STORM REPORT FORM --------------*/
 fieldset {
   margin: 2rem 0;
   border: 1px solid #445ba9;
@@ -177,4 +166,19 @@ legend {
   min-height: 100px;
   text-justify: auto;
   border-radius: 4px;
+}
+
+#severity {
+  max-width: 17em;
+}
+
+#severValue {
+  position: relative;
+  top: -37px;
+  left: 320px;
+}
+
+#region {
+  padding-top: 0;
+  margin-top: -10px;
 }
