--- a/lesson9/styles/small9.css
+++ b/lesson9/styles/small9.css
@@ -1,4 +1,9 @@
 @media only screen and (max-width: 35em) {
+  .towns {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
   main {
     padding: 0px;
   }
@@ -6,11 +11,6 @@
   h1 {
     font-size: 1.5em;
     padding-left: 0;
-  }
-
-  h2 {
-    font-size: 1.1em;
-    margin: 0.5em;
   }
 
   header p {
@@ -62,7 +62,7 @@
     padding: 0px;
     padding-top: 4px;
   }
-  
+
   #line1 {
     font-size: 0.8em;
   }
@@ -74,9 +74,5 @@
 
   #content {
     width: 100%;
-  }
-
-  #area input {
-    min-width: 94%;
   }
 }
