--- a/lesson9/styles/medium9.css
+++ b/lesson9/styles/medium9.css
@@ -6,8 +6,25 @@
 
   .towns {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    width: 105%;
   }
+
+  .towns section div:nth-child(1) {
+    max-width: 30%;
+  }
+
+  .towns section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.towns section:nth-child(2) {
+  flex-direction: row-reverse;
+
+}
 
   header p {
     font-size: 0.9em;
@@ -47,5 +64,10 @@
   #line2,
   #line3 {
     font-size: 0.7em;
+  }
+
+  .map {
+    height: 200px;
+    margin: 10px 10px -10px;
   }
 }
