--- a/lesson9/styles/small9.css
+++ b/lesson9/styles/small9.css
@@ -1,9 +1,4 @@
 @media only screen and (max-width: 35em) {
-  .towns {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-
   main {
     padding: 0px;
   }
@@ -12,6 +7,19 @@
     font-size: 1.5em;
     padding-left: 0;
   }
+
+  .towns {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .towns section div:nth-child(1) {
+    max-width: 100%;
+  }
+
+  .towns section {
+    display: block;
+}
 
   header p {
     font-size: 0.8em;
@@ -74,5 +82,9 @@
 
   #content {
     width: 100%;
+  }
+
+  .map {
+    display: none;
   }
 }
