--- a/lesson11/styles/small11.css
+++ b/lesson11/styles/small11.css
@@ -1,7 +1,6 @@
 @media only screen and (max-width: 35em) {
   main {
     padding: 0px;
-    margin-top: 20px;
   }
 
   h1 {
@@ -9,17 +8,9 @@
     padding-left: 0;
   }
 
-  .towns {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-
-  .towns section div:nth-child(1) {
-    max-width: 100%;
-  }
-
-  .towns section {
-    display: block;
+  h2 {
+    font-size: 1.1em;
+    margin: 0.5em;
   }
 
   header p {
@@ -37,9 +28,6 @@
   nav button {
     line-height: 15px;
     font-size: 20px;
-  }
-
-  nav button {
     display: inline-block;
     background: transparent;
     border: none;
@@ -76,16 +64,41 @@
     font-size: 0.8em;
   }
 
-  #line2,
-  #line3 {
-    font-size: 0.6em;
+  #pancake p {
+    font-size: 0.9em;
   }
 
   #content {
     width: 100%;
   }
 
-  .map {
+  .forecast,
+  .contact .map {
     display: none;
+  }
+
+  .contact {
+    padding: 0;
+  }
+
+  .contact div p {
+    margin: 2px;
+  }
+
+  .article img {
+    width: 99%;
+    margin: 0 0 10px;
+    border: solid gray 1px;
+    box-shadow: none;
+  }
+
+  .icon {
+    max-width: 30px;
+    max-height: 30px;
+    border: none;
+  }
+
+  #line2 {
+    font-size: 0.75em;
   }
 }
