--- a/final-project/styles/small.css
+++ b/final-project/styles/small.css
@@ -17,5 +17,48 @@
     }
 
 /* NAVIGATION BAR ----------------------------------*/
+#active-page {
+  display: none;
+}
 
+nav {
+  line-height: 2em;
+  text-align: center;
+  padding-right: 10px;
+  margin-top: 0px;
+
+
+  
+  margin: 0;
+  border-radius: 1px;
+}
+/*
+.botaoMenu, nav button {
+  line-height: 15px;
+  font-size: 20px;
+  display: inline-block;
+  background: transparent;
+  border: none;
+  color: white;
+}
+/*
+nav ul.hide {
+  display: none;
+}
+
+
+/*
+nav ul li a {
+  display: block;
+  line-height: 15px;
+  font-size: 20px;
+}
+/*
+nav ul li:hover {
+  border-top: solid black 2px;
+}
+/*
+nav ul li {  border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+*/
   }
