--- a/final-project/styles/large.css
+++ b/final-project/styles/large.css
@@ -63,7 +63,8 @@ nav a:hover {
   border-bottom: solid black 2px;
 }
 
-.botaoMenu, nav button {
+.botaoMenu,
+nav button {
   display: none;
 }
 
@@ -75,6 +76,38 @@ nav a:hover {
   color: yellow;
 }
 
+/* BANNER - HERO IMAGE -----------------------------*/
+.banner {
+  width: 100%;
+  position: absolute;
+  margin-top: -65px;
+  z-index: -1;
+}
+
+.reserveButton {
+  text-decoration: none;
+  border: solid 2px gray;
+  background: white;
+  opacity: 0.7;
+  position: absolute;
+  width: 70%;
+  font-size: 2em;
+  font-family: Montserrat, Arial;
+  text-align: center;
+  padding: 4% 0;
+  margin: 15%;
+  margin-top: 15%;
+}
+
+.reserveButton:hover, .reserveButton:visited {
+  color: black;
+}
+
+/* MAIN --------------------------------------------*/
+h2 {
+  padding-top: 35%;
+}
+
 /* FOOTER ------------------------------------------*/
 footer {
   background: #4F9D69;
@@ -82,7 +115,8 @@ footer {
   text-align: center;
 }
 
-#line1, #line2 {
+#line1,
+#line2 {
   font-size: 1em;
   color: white;
   margin-top: 3px;
