--- a/final-project/styles/medium.css
+++ b/final-project/styles/medium.css
@@ -56,8 +56,22 @@
     padding-top: 33%;
   }
 
-
-
+  h3 {
+    font-size: 1.5em;
+  }
+  
+  .content {
+    margin: 0 5% 30px;
+  }
+  
+  .content img {
+    min-width: 250px;
+  }
+  
+  .content .text {
+    padding: 10px;
+    font-size: 0.95em;
+  }
 
 
 
