--- a/final-project/styles/large.css
+++ b/final-project/styles/large.css
@@ -100,7 +100,8 @@ nav button {
   margin-top: 15%;
 }
 
-.reserveButton:hover, .reserveButton:visited {
+.reserveButton:hover,
+.reserveButton:visited {
   color: black;
 }
 
@@ -132,11 +133,6 @@ h3 {
   padding: 10px;
   font-size: 1em;
 }
-
-
-
-
-
 
 /* CONTACT -----------------------------------------*/
 .contact {
@@ -191,6 +187,97 @@ footer {
   color: rgba(245, 237, 237, 0.904);
   margin-top: 1px;
   margin-bottom: 1px;
+}
+
+/* RESERVATION PAGE --------------------------------*/
+fieldset {
+  margin: 2em 5em;
+  border: 2px solid #4F9D69;
+  border-radius: 5px;
+  padding: 1em;
+}
+
+legend {
+  color: black;
+  font-weight: bold;
+  font-size: 1.1em;
+  margin: 0 2em;
+  padding: 0.5em;
+}
+
+.top,
+form div {
+  display: block;
+  padding-top: 1.5em;
+  font-size: 1.1em;
+}
+
+.top input,
+.top select {
+  display: block;
+  font-size: 1em;
+  border: solid 1px #999;
+  border-radius: 4px;
+  padding: .75em;
+  margin-top: 2px;
+  color: black;
+  width: 100%;
+  max-width: 20em;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.sbs {
+  display: block;
+  font-size: 1.05em;
+  color: black;
+  margin: 5px 10px -4px;
+}
+
+.submitBtn {
+  border: none;
+  background-color: #101aaa;
+  color: white;
+  border-radius: 0.5em;
+  padding: .75em 1em;
+  margin: 0 4.7em 2em;
+  width: 96%;
+  max-width: 20em;
+  cursor: pointer;
+  font-size: 1.1em;
+}
+
+.top select:required {
+  border-left: red solid 6px;
+  max-width: 21.6em;
+}
+
+.top select:required:valid {
+  border-left: green solid 6px;
+  max-width: 21.6em;
+}
+
+.top input:required {
+  border-left: red solid 6px;
+  max-width: 19.6em;
+}
+
+.top input:required:valid {
+  border-left: green solid 6px;
+  max-width: 19.6em;
+}
+
+#area {
+  width: 99.5%;
+  padding: 0px 25px 20px;
+  margin: 0px -25px;
+}
+
+#area textarea {
+  min-width: 100%;
+  min-height: 100px;
+  text-justify: auto;
+  border-radius: 4px;
+  padding: 5px;
 }
 
 /* CONTACT PAGE ------------------------------------*/
