--- a/final-project/styles/large.css
+++ b/final-project/styles/large.css
@@ -189,6 +189,55 @@ footer {
   margin-bottom: 1px;
 }
 
+/* TEMPLES PAGE ------------------------------------*/
+.disposicao {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 3%;
+}
+
+.templeInfo {
+  background: #edffe3;
+  width: 97%;
+}
+
+.templeInfo img {
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+.templeInfo a {
+  display: block;
+  font-size: 0.9em;
+  padding: 10px;
+}
+
+.textTemple,
+.infoTemple {
+  padding: 0 10px;
+}
+
+.infoTemple h4 {
+  margin-top: 0.8em;
+  margin-bottom: 1px;
+}
+
+.infoTemple p {
+  margin: 0;
+  padding-left: 10px;
+  font-size: 0.9em;
+}
+
+.contentTemples {
+  background: #edffe3;
+  margin: 0 10% 30px;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-content: center;
+}
+
+
 /* RESERVATION PAGE --------------------------------*/
 fieldset {
   margin: 2em 5em;
