--- a/final-project/styles/medium.css
+++ b/final-project/styles/medium.css
@@ -57,7 +57,7 @@
   }
 
   h3 {
-    font-size: 1.5em;
+    font-size: 1.3em;
   }
 
   .content {
@@ -97,6 +97,21 @@
   }
 
   /* FOOTER ------------------------------------------*/
+
+/* TEMPLES PAGE ------------------------------------*/
+.disposicao {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.templeInfo {
+  width: 100%;
+  margin-top: 2%;
+}
+
+.infoTemple h4 {
+  margin-top: 0.7em;
+}
 
   /* RESERVATION PAGE --------------------------------*/
   fieldset {
